# CERTA-DSO

./: CR  README.md  certa_dso.py  pyproject.toml  requirements.txt
